# secure-password-generator

./: .coverage  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  passgen-gui.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml  security.yml  test.yml  tests.yml
data/: weak_passwords.txt
secure-password-generator/: .bandit  .gitignore  .ruff.toml  README.md  pyproject.toml
secure-password-generator/.github/workflows/: security.yml
secure-password-generator/src/: __init__.py  cli.py  updater.py
src/: cli.py  clipboard.py  config.py  generator.py  gui_app.py  wordlist.py
tests/: test_config.py  test_generator.py
